Changed Button to Input

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="form_row">
                         <label for="cardnumber">Card Number</label>
-                        <input type="num"
+                        <input type="text"
                                id="cardnumber" 
                                maxlength="16"
                                minlength="16"
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="form_row">
-                        <button class="form_submit" type="submit">Confirm</button>
+                        <input class="form_submit" type="button" value="Confirm" />
                     </div>
 
                 </form>
@@ -94,7 +94,7 @@
                 <img class="complete_icon" src="./Images/icon-complete.svg" alt="" />
                 <h1>Thank You!</h1>
                 <p>We've added your card details!</p>
-                <button class="continue">Continue</button>
+                <input class="continue" type="button" value="Continue" />
 
             </div>
         </div>
