--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="white_background">
             <div class="card_info">
-                <form id="card_details">
+                <form id="card_details" method="get">
                     <div class="form_row"> 
                         <label for="cardholder">Cardholder Name</label>
                         <input type="text" id="cardholder" placeholder="e.g. Jane Appleseed" name="cardholder" />
