Validation and Matching
Form validation and keyup functionality working as intended.  Still can't get form to send however.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="./Images/bg-main-mobile.png" alt=""/>
             </picture> -->
             <div class="card card_back">
-                <span>000</span>
+                <span class="back_card_CVC">000</span>
             </div>
             <div class="card card_front">
                 <div class="white_circle"></div>
@@ -31,8 +31,10 @@
                     <span class="front_card_numbers">0000 0000 0000 0000</span>
                 </div>
                 <div class="name_expire">
-                    <span>Jane Appleseed</span>
-                    <span>00/00</span>
+                    <span class="front_card_name">Jane Appleseed</span>
+                    <div class=>
+                    <span class="front_card_month">00</span><span>/</span><span class="front_card_year">00</span>
+                    </div>
                 </div>
             </div>
         </div>
