--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                     <span class="front_card_numbers">0000 0000 0000 0000</span>
                 </div>
                 <div class="name_expire">
-                    <span class="front_card_name">Jane Appleseed</span>
+                    <div>
+                        <span class="front_card_name">Jane Appleseed</span>
+                    </div>
                     <div class=>
-                    <span class="front_card_month">00</span><span>/</span><span class="front_card_year">00</span>
+                        <span class="front_card_month">00</span><span>/</span><span class="front_card_year">00</span>
                     </div>
                 </div>
             </div>
