--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="form_row">
-                        <input class="form_submit" type="button" value="Confirm" />
+                        <button class="form_submit" type="submit">Confirm</button>
                     </div>
 
                 </form>
@@ -99,7 +99,6 @@
                 <h1>Thank You!</h1>
                 <p>We've added your card details!</p>
                 <input class="continue" type="button" value="Continue" />
-
             </div>
         </div>
     </main>
